slider has been fixed with alignment

--- a/css/mobile-view.css
+++ b/css/mobile-view.css
@@ -212,7 +212,7 @@ color: var(--nykaa-pink);
     /* padding: 10px 40px; */
     border: 1px solid var(--nykaa-pink);
     position: relative;
-    top: 68%;
+    top: 63%;
     border-radius: 5px;
 }
 
